# xbatch

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: release.sh
src/: batch.rs  cli.rs  executor.rs  main.rs  result.rs
test/: data.csv  ids.sh  load.sh  test.sh
