[package]
name = "xbatch"
version = "0.1.0"
edition = "2021"
authors = ["Isaac Adams <isaac.d.adams@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
monitors the stdout and stderr of your script for each run

homepage: https://github.com/isaacadams/xbatch
"""
homepage = "https://github.com/isaacadams/xbatch"
repository = "https://github.com/isaacadams/xbatch"
keywords = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "xbatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"]}
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"]}
tokio-stream = "0.1.14"

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9.96", features = ["vendored"]}

[package.metadata.cross]
[target.aarch64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install -y --no-install-recommends pkg-config make g++ libssl-dev"]
[target.x86_64-unknown-linux-musl]
pre-build = ["apt-get update && apt-get install -y --no-install-recommends pkg-config make g++ libssl-dev"]
[target.aarch64-unknown-linux-musl]
pre-build = ["apt-get update && apt-get install -y --no-install-recommends pkg-config make g++ libssl-dev"]
[target.x86_64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install -y --no-install-recommends pkg-config make g++ libssl-dev"]
